# shmapy

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todos_extended.md
.github/workflows/: unit_tests.yml
command_line_documentation/: README.md
lone_wolf/: __init__.py  __main__.py  hex_mapify.py  input.py
lone_wolf/examples/: plot_other_coordinates.py
lone_wolf/static/: demo_input1.csv  demo_input2.csv  state_coordinates.csv
shmapy/: __init__.py  __main__.py  facet_shmap.py  hex_mapify.py  hex_shmap.py  input.py
shmapy/examples/: plot_other_coordinates.ipynb  plot_other_coordinates.py  shmapy_basics.ipynb
shmapy/static/: demo_input4.csv  facet_geo_states.csv
tests/: test_facet_shmap.py  test_hex_mapify.py  test_hex_shmap.py  test_input.py
tests/data/: demo_input1.csv  demo_input2.csv  demo_input3.csv  demo_input4.csv  demo_input5.csv  demo_input6.csv
