[metadata]
name = shmapy
version = 0.2
description = The most amazing package for building hex maps
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = map, hexagons, united_states
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
    shmapy/hex_mapify.py
    shmapy/input.py
    shmapy/__main__.py
    shmapy/__init__.py
install_requires =
    fire
    matplotlib
    pandas